--- a/pom.xml
+++ b/pom.xml
@@ -16,6 +16,7 @@
     <build>
         <plugins>
             <plugin>
+
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-compiler-plugin</artifactId>
                 <version>3.7.0</version>
@@ -27,6 +28,7 @@
             </plugin>
         </plugins>
     </build>
+
 
 
     <dependencies>
@@ -48,6 +50,13 @@
             <artifactId>maven-compiler-plugin</artifactId>
             <version>3.8.1</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.apache.maven.plugins</groupId>
+            <artifactId>maven-surefire-plugin</artifactId>
+            <version>3.0.0-M5</version>
+        </dependency>
+
 
 
     </dependencies>
